--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A **Binary Tree** has nodes which all have a **degree equal or less than 2**. Because every node’s children are at most **2**, we call them **left child** and **right child**.They are the roots of the **left sub-tree** and the **right sub-tree** of their parent node.\n",
+    "A **Binary Tree** has nodes which all have a **degree less than or equal to 2**. Because every node’s children are at most **2**, we call them **left child** and **right child**.They are the roots of the **left sub-tree** and the **right sub-tree** of their parent node.\n",
     "   \n",
     "Some nodes may have only left or only right child, but not both. Some nodes may have *no children* and are called **leaves**."
    ]
