modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -506,8 +506,17 @@
     }
    ],
    "source": [
+    "// Pre-Order Traversal\n",
     "// Print the Node, then visit the Left Child, then visit the Right Child\n",
     "binaryTree.PrintPreOrder()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -534,8 +543,17 @@
     }
    ],
    "source": [
+    "// In-Order Traversal\n",
     "// Visit the Left Child, then Print the Node, then visit the Right Child\n",
     "binaryTree.PrintInOrder()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -562,6 +580,7 @@
     }
    ],
    "source": [
+    "// Post-Order Traversal\n",
     "// Visit the Left Child, then visit the Right Child, then Print the Node\n",
     "binaryTree.PrintPostOrder()"
    ]
