modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -342,13 +342,13 @@
     "\n",
     "\n",
     "        // If it can be determined that the current node has a Left Child:\n",
-    "        //      visit the current node's Left Child\n",
+    "        //      recur in the current node's Left Child\n",
     "        if( this.LeftChild != null )\n",
     "            this.LeftChild.PrintPreOrder();\n",
     "\n",
     "\n",
     "        // If it can be determined that the current node has a Right Child:\n",
-    "        //      visit the current node's Right Child\n",
+    "        //      recur in the current node's Right Child\n",
     "        if( this.RightChild != null )\n",
     "            this.RightChild.PrintPreOrder();\n",
     "    \n",
@@ -358,7 +358,7 @@
     "    {\n",
     "\n",
     "        // If it can be determined that the current node has a Left Child:\n",
-    "        //      visit the current node's Left Child\n",
+    "        //      recur in the current node's Left Child\n",
     "        if( this.LeftChild != null )\n",
     "            this.LeftChild.PrintInOrder();\n",
     "\n",
@@ -369,7 +369,7 @@
     "\n",
     "\n",
     "        // If it can be determined that the current node has a Right Child:\n",
-    "        //      visit the current node's Right Child\n",
+    "        //      recur in the current node's Right Child\n",
     "        if( this.RightChild != null )\n",
     "            this.RightChild.PrintInOrder();\n",
     "\n",
@@ -379,13 +379,13 @@
     "    {\n",
     "\n",
     "        // If it can be determined that the current node has a Left Child:\n",
-    "        //      visit the current node's Left Child\n",
+    "        //      recur in the current node's Left Child\n",
     "        if( this.LeftChild != null )\n",
     "            this.LeftChild.PrintPostOrder();\n",
     "\n",
     "\n",
     "        // If it can be determined that the current node has a Right Child:\n",
-    "        //      visit the current node's Right Child\n",
+    "        //      recur in the current node's Right Child\n",
     "        if( this.RightChild != null )\n",
     "            this.RightChild.PrintPostOrder();\n",
     "\n",
