modified:   16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb modified:   16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb new file:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb modified:   17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb

--- a/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Custom Implementations\n",
-    "### Linked Lists (Dynamic Implementation)\n",
+    "## Linked Lists (Dynamic Implementation)\n",
     "---"
    ]
   },
