--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## Custom Implementations\n",
-    "### Binary Trees\n",
+    "## Binary Trees\n",
     "---"
    ]
   },
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../../_img/OneSingleChildGenericTree.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+    "<img src=\"../../_img/OneSingleChildGenericTree.jpg\" style=\"display: block; margin: auto; width: 350px;\"></img>"
    ]
   },
   {
