--- a/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Custom Implementations\n",
-    "### Static Lists (An Array-based Implementation)\n",
+    "## Static Lists (An Array-based Implementation)\n",
     "---"
    ]
   },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -103,7 +103,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -498,7 +498,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -517,21 +517,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>0</td><td>[ 0, 0, 0, 0 ]</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resizableIntArray"
    ]
@@ -554,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -563,7 +552,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -576,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -585,21 +574,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>7</td><td>[ 1, 2, 3, 4, 5, 6, 7, 0 ]</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resizableIntArray"
    ]
@@ -630,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -639,7 +617,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -787,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -796,21 +774,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>8</td><td>[ 1, 2, 3, 99, 4, 5, 6, 7 ]</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resizableIntArray"
    ]
@@ -833,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -842,21 +809,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Does the array contain the value?\n",
     "resizableIntArray.Contains( 99 )"
@@ -864,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -873,21 +829,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// At which Index is that value now located?\n",
     "resizableIntArray.IndexOf( 99 )"
@@ -911,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -920,7 +865,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1115,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1124,21 +1069,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>7</td><td>[ 1, 2, 3, 4, 5, 6, 7, 0 ]</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resizableIntArray"
    ]
@@ -1160,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1169,28 +1103,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resizableIntArray.Remove( 1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1199,21 +1122,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>6</td><td>[ 2, 3, 4, 5, 6, 7, 0, 0 ]</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resizableIntArray"
    ]
@@ -1236,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1245,7 +1157,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1255,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1264,21 +1176,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>0</td><td>[ 0, 0, 0, 0 ]</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resizableIntArray"
    ]
