--- a/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -89,7 +89,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -811,7 +811,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -830,10 +830,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>0</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
@@ -856,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -865,7 +876,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -878,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -887,17 +898,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>7</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -906,10 +928,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -932,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -941,7 +971,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -951,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -960,17 +990,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>8</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -979,10 +1020,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1005,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1014,7 +1063,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1024,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1033,17 +1082,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>9</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1052,10 +1112,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99 -> 1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1078,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1087,7 +1155,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1097,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1106,17 +1174,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>10</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1125,10 +1204,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99 -> 1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7 -> 99"
+     ]
+    }
+   ],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1153,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1162,17 +1249,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList.Remove( 99 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1181,17 +1279,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>9</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1200,10 +1309,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7 -> 99"
+     ]
+    }
+   ],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1228,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1237,17 +1354,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList.RemoveAt( linkedIntegerList.NodeCount - 1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1256,17 +1384,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>8</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1275,10 +1414,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1301,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1310,10 +1457,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Is there any more occurrences of the value 99 in the list?\n",
     "linkedIntegerList.Contains( 99 )"
@@ -1321,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1330,10 +1488,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// At which index of the list does the value 99 occur?\n",
     "linkedIntegerList.IndexOf( 99 )"
@@ -1357,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1366,7 +1535,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1376,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1385,10 +1554,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>0</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linkedIntegerList"
    ]
