--- a/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -103,7 +103,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -498,7 +498,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -517,10 +517,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>0</td><td>[ 0, 0, 0, 0 ]</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resizableIntArray"
    ]
@@ -543,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -552,7 +563,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -565,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -574,10 +585,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>7</td><td>[ 1, 2, 3, 4, 5, 6, 7, 0 ]</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resizableIntArray"
    ]
@@ -608,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -617,7 +639,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -765,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -774,10 +796,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>8</td><td>[ 1, 2, 3, 99, 4, 5, 6, 7 ]</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resizableIntArray"
    ]
@@ -800,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -809,10 +842,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Does the array contain the value?\n",
     "resizableIntArray.Contains( 99 )"
@@ -820,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -829,10 +873,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// At which Index is that value now located?\n",
     "resizableIntArray.IndexOf( 99 )"
@@ -856,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -865,7 +920,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1060,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1069,10 +1124,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>7</td><td>[ 1, 2, 3, 4, 5, 6, 7, 0 ]</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resizableIntArray"
    ]
@@ -1094,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1103,17 +1169,28 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resizableIntArray.Remove( 1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1122,10 +1199,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>6</td><td>[ 2, 3, 4, 5, 6, 7, 0, 0 ]</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resizableIntArray"
    ]
@@ -1148,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1157,7 +1245,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1167,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1176,10 +1264,21 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td>0</td><td>[ 0, 0, 0, 0 ]</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resizableIntArray"
    ]
