--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Custom Implementations\n",
-    "## Binary Search Trees\n",
+    "## *Binary Search Trees*\n",
     "---"
    ]
   },
@@ -23,7 +23,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
