--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## Custom Implementations\n",
-    "## Binary Trees\n",
+    "## *Binary Trees*\n",
     "---"
    ]
   },
