--- a/17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Custom Implementations\n",
-    "## General Trees (Dynamic Implementation)\n",
+    "## *General Trees (Dynamic Implementation)*\n",
     "---"
    ]
   },
